--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
@@ -64,10 +64,10 @@ text.path-text {
         fill: rgba($accent, 0.3);
     }
 
-    text:not(.node-name):not(.id-holder) {
-        stroke-width: 0.75 !important;
-        stroke: #333;
-    }
+    // text:not(.node-name):not(.id-holder) {
+    //     stroke-width: 0.75 !important;
+    //     stroke: #333;
+    // }
 }
 
 .node-anchor {
@@ -91,15 +91,17 @@ text.path-text {
 
 
 rect.id-holder {
-    fill: #ccc;
-    stroke: #666;
+    fill: #e0e0e0;
+    stroke: #e0e0e0;
     stroke-width: 1;
 }
 
 text.id-holder {
     stroke-width: 0;
-    fill: $light;
+    fill: #666;
     font-size: 10px;
+    text-transform: uppercase;
+    font-weight: 500;;
 }
 
 rect.API.START {
