--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.html
@@ -20,7 +20,7 @@
         <div class="suggestion-list-wrapper">
             <div class="mb-3">
                 <odp-search-box [open]="true" [fullWidth]="true" [selectOnEnter]="true"
-                    (enteredText)="searchTerm=$event" (reset)="searchTerm=null">
+                    (enteredText)="searchTerm=$event;$triggerSearch.next($event)" (reset)="searchTerm=null">
                 </odp-search-box>
             </div>
             <div class="border rounded">
@@ -29,7 +29,11 @@
                 </div>
                 <div class="suggestion-list">
                     <div class="list-group list-group-flush">
-                        <div *ngFor="let item of availableMethods|commonFilter:'name':searchTerm"
+                        <div *ngIf="fetchingFormulas"
+                            class="list-group-item font-12 d-flex align-items-center justify-content-start">
+                            <span class="fa fa-spinner fa-pulse"></span>
+                        </div>
+                        <div *ngFor="let item of availableMethods"
                             class="list-group-item font-12 d-flex align-items-center justify-content-start">
                             <span class="dsi dsi-plus-circle hover text-dark mr-2" (click)="placeMethod(item)"></span>
                             <div class="d-flex align-items-center">
@@ -42,7 +46,8 @@
                                     <span class="text-grey" *ngIf="p.type == 'Array'">{{'[ '+p.name+' ]'}}</span>
                                     <span *ngIf="!lp">,&nbsp;</span>
                                 </ng-container>
-                                )
+                                )&nbsp;:&nbsp;
+                                <span [ngClass]="getDataTypeStyleClass(item.returnType)">{{item.returnType}}</span>
                             </div>
                         </div>
                         <div *ngIf="(availableMethods|commonFilter:'name':searchTerm).length==0"
