--- a/src/app/home/agents/agents.component.scss
+++ b/src/app/home/agents/agents.component.scss
@@ -7,7 +7,8 @@
 }
 
 .grid-container {
-  height: calc(100vh - 214px);
+  overflow-y: auto;
+  height: calc(100vh - 180px);
 }
 
 .agent-name-wrapper {
