code editor fix

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,9 +22,9 @@
         </button> -->
       </div>
       <div *ngIf="isSuperAdmin" (click)="loadAdminPage()"
-        class="admin-settings bg-light rounded d-flex flex-column justify-content-center align-items-center mr-3 pt-1 hover"
+        class="admin-settings d-flex flex-column justify-content-center align-items-center mr-3 pt-1 hover"
         ngbTooltip="Admin Panel" placement="bottom">
-        <span class="dsi dsi-admin"></span>
+        <span class="dsi dsi-agent font-22"></span>
         <!-- <odp-admin-console-icon size="28"></odp-admin-console-icon> -->
       </div>
       <!-- <div [@userProfileIcon]="showProfileOptions"
