--- a/src/app/admin/metadata/mapper-formulas/mapper-formulas.component.scss
+++ b/src/app/admin/metadata/mapper-formulas/mapper-formulas.component.scss
@@ -49,3 +49,11 @@
         right: 10px;
     }
 }
+
+.editor-wrapper {
+    min-height: 600px;
+
+    .code-editor {
+        height: 600px;
+    }
+}
