--- a/src/app/admin/metadata/mapper-formulas/mapper-formulas.component.html
+++ b/src/app/admin/metadata/mapper-formulas/mapper-formulas.component.html
@@ -154,3 +154,5 @@
         </button>
     </div>
 </div>
+
+<odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteModal($event)"></odp-delete-modal>
