--- a/src/app/home/b2b-flows-manage/path-properties/path-properties.component.html
+++ b/src/app/home/b2b-flows-manage/path-properties/path-properties.component.html
@@ -50,6 +50,7 @@
         <label class="font-14 fw-400 text-dark d-flex align-items-center justify-content-between" for="nodeName">
             <span>Path Condition</span>
         </label>
-        <odp-path-condition-creator [nodeList]="nodeList" [(value)]="condition"></odp-path-condition-creator>
+        <odp-path-condition-creator [nodeList]="nodeList" [(value)]="condition"
+            [prevNode]="path.path._id"></odp-path-condition-creator>
     </div>
 </div>
