--- a/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.html
@@ -79,12 +79,12 @@
                     <div *ngIf="toggle['editorType']=='json'" class="d-flex align-items-center hover"
                         (click)="toggle['editorType']='text'">
                         <span class="dsi dsi-object text-primary"></span>
-                        <span class="ml-2 font-12 fw-400">Text</span>
+                        <span class="ml-2 font-12 fw-400">JSON</span>
                     </div>
                     <div *ngIf="toggle['editorType']=='text'" class="d-flex align-items-center hover"
                         (click)="toggle['editorType']='json'">
-                        <span class="dsi dsi-object text-primary"></span>
-                        <span class="ml-2 font-12 fw-400">JSON</span>
+                        <span class="dsi dsi-align-right text-primary"></span>
+                        <span class="ml-2 font-12 fw-400">Editor</span>
                     </div>
                     <!-- <div class="d-flex align-items-center hover" (click)="toggle['pasteJSON']=!toggle['pasteJSON']">
                         <span class="dsi dsi-object text-primary"></span>
