--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -381,7 +381,7 @@
               <ng-container *ngIf="
                   !userInLocal &&
                   !userInAzureAD &&
-                  (selectedAuthType == 'local'||selectedAuthType == 'ldap' )
+                  selectedAuthType != 'azure'
                 ">
                 <div class="form-group">
                   <label for="password">
@@ -471,7 +471,7 @@
         </form>
         <div class="d-flex align-items-center justify-content-between mt-auto">
           <button *ngIf="
-              (selectedAuthType == 'local'||selectedAuthType == 'ldap' ) &&
+              selectedAuthType != 'azure' &&
               !userInLocal &&
               !userInAzureAD &&
               hasPermission('PMUBC')
