--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -152,8 +152,11 @@
                 <span class="dsi dsi-settings text-primary hover" (click)="toggle['url']=!toggle['url']"></span>
             </label>
             <div class="position-relative">
-                <textarea id="nodeUrl" class="form-control" cols="30" rows="4"
-                    [(ngModel)]="currNode.options.url"></textarea>
+                <odp-styled-text (finalValue)="onValueChange($event)" [value]="currNode.options.url" #typeAhead
+                    [ngbTypeahead]="search" [resultFormatter]="formatter" [inputFormatter]="formatter"
+                    [searchTerm]="searchTerm" class="styled-wrapper"></odp-styled-text>
+                <!-- <textarea id="nodeUrl" class="form-control" cols="30" rows="4"
+                    [(ngModel)]="currNode.options.url"></textarea> -->
             </div>
         </div>
         <div class="form-group">
