--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
@@ -56,6 +56,16 @@
                                 <span class="node-icon font-16 fw-400 dsi dsi-insight mr-2"></span>
                                 <span class="font-13 fw-400 text-secondary">Conflict</span>
                             </div>
+                            <div *ngIf="node.type=='FOREACH'"
+                                class="node-item border-bottom pb-2 mb-2 d-flex align-items-center hover">
+                                <span class="node-icon font-16 fw-400 dsi dsi-refresh mr-2"></span>
+                                <span class="font-13 fw-400 text-secondary">For Each</span>
+                            </div>
+                            <div *ngIf="node.type=='REDUCE'"
+                                class="node-item border-bottom pb-2 mb-2 d-flex align-items-center hover">
+                                <span class="node-icon font-16 fw-400 dsi dsi-undo mr-2"></span>
+                                <span class="font-13 fw-400 text-secondary">Reduce</span>
+                            </div>
                             <div *ngIf="node.type=='MAPPING'"
                                 class="node-item border-bottom pb-2 mb-2 d-flex align-items-center hover ">
                                 <span class="node-icon font-16 fw-400 dsi dsi-mapping mr-2"></span>
