--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -38,6 +38,8 @@
             <option *ngIf="!isInputNode" value="MAPPING">Mapping</option>
             <option *ngIf="!isInputNode" value="DEDUPE">De-Dupe</option>
             <option *ngIf="!isInputNode" value="CONFLICT">Conflict</option>
+            <option *ngIf="!isInputNode" value="FOREACH">For Each</option>
+            <option *ngIf="!isInputNode" value="REDUCE">Reduce</option>
             <option *ngIf="!isInputNode" value="CODEBLOCK">Code Block</option>
             <option *ngIf="!isInputNode" value="CONNECTOR">Connector</option>
             <option *ngIf="!isInputNode" value="UNWIND">Change Root</option>
